fixed misaligned maps

--- a/style.css
+++ b/style.css
@@ -9,8 +9,20 @@ body {
   shape-rendering: crispEdges;
 }
 
+.bubbles {
+    float:left;
+}
 .dot {
   stroke: #000;
+}
+.map1 {
+/*    float: left;*/
+    position: fixed;
+}
+
+.map2 {
+/*    float: left;*/
+    position: relative;
 }
 
 /*Add Tooltip Type here*/
@@ -39,3 +51,5 @@ body {
             .msa:hover {
                 color: yellow;
             }
+
+
